# monomorph

./: README.md  cli.py  example.py  main.py  pyproject.toml
examples/spring-petclinic/: Dockerfile  decomposition_with_tests.json
monomorph/: __init__.py  _metadata.py  _version.py  const.py  helpers.py  microservice.py  models.py  monomorph.py  project.py  report.py  utils.py
monomorph/analysis/: __init__.py  json.py
monomorph/assembly/dependency/: __init__.py  buildfile.py  gradle.py  maven.py
monomorph/assembly/entrypoint/: __init__.py  detector.py  generator.py
monomorph/decision/: graph.py  models.py  nodes.py  tools.py  workflow.py
monomorph/execution/: entrypoint.py  helpers.py  microservice.py  project.py  report.py
monomorph/generation/: agentic.py  code.py  models.py  prompts.py  refact.py  type.py  utils.py
monomorph/llm/: custom_chat.py  factory.py  llm_client.py  models.py  prompt.py  utils.py
monomorph/logging/: printer.py  utils.py
monomorph/modeling/: json.py  local.py  model.py
monomorph/planning/: dependencies.py  inheritance.py  preprocessing.py  proxies.py
monomorph/preprocessing/: inheritance.py  preprocessing.py
monomorph/resources/: model_map.json
monomorph/validation/: callbacks.py  common.py  const.py  docker.py  raaid.py  utils.py
tests/: import_test_examples.py  test_compilation_runner.py  test_dependency_detector.py  test_entry_point_generator.py  test_extract_docker_command.py  test_gradle_buildfile.py  test_grpc_handler.py  test_grpc_import_parser.py  test_inheritance_handler.py  test_java_argparser.py
(+155 files in other folders)
